# fastapi-auth-service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 20260309_0001_initial.py  20260402_0002_password_reset_tokens.py
app/api/: deps.py  exception_handlers.py
app/api/v1/routes/: auth.py  users.py
app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
app/db/: session.py
app/models/: __init__.py  password_reset_token.py  refresh_token.py  user.py
app/observability/: middleware.py
app/repositories/: password_reset_token_repo.py  token_repo.py  user_repo.py
app/schemas/: auth.py  users.py
app/services/: auth_service.py  password_hasher.py  password_reset_notifier.py  password_reset_token_service.py  token_service.py
scripts/: common.sh  dev.sh  init_db.sh  test.sh
tests/: conftest.py
tests/db/: test_migrations.py
tests/factories/: user_factory.py
tests/integration/: helpers.py  test_auth_rate_limits.py  test_auth_routes.py  test_health_routes.py  test_users_routes.py
tests/unit/: test_auth_service.py  test_password_hasher.py  test_password_reset_token_service.py  test_rate_limit.py  test_security_logging.py  test_token_service.py
